# boston_project

./: .env  .gitignore  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
boston_project/: __init__.py  airbyte.py  assets.py  configs.yml  definitions.py  eval_metrics.py
boston_project/notebooks/: boston.ipynb
boston_project/resources/: __init__.py  airbyte.py  dbt.py
boston_project/utils/: fig_helper.py
dbt_boston/: .user.yml  dbt_project.yml
dbt_boston/models/: boston_housing.sql  schema.yml
docker/: .env  docker-compose.yaml
docker/init-sql/: init.sql
mlartifacts/109392716834284787/252967c554264364bcffe8d91251a1c0/artifacts/: model_summary.txt
mlartifacts/109392716834284787/3561df758f854147b5f3792b2af963dd/artifacts/: model_summary.txt
mlartifacts/109392716834284787/a99b5b8d81944b71ba3b0bba940acd71/artifacts/: model_summary.txt
mlartifacts/109392716834284787/c9e294a7be514359a40f60d0bc62e805/artifacts/: model_summary.txt
mlartifacts/358084352359714013/042890db36dc47768cccc125db1d4e22/artifacts/: model_summary.txt
mlartifacts/358084352359714013/0d862b4c35294e1091b79ef3633f90ef/artifacts/: model_summary.txt
mlartifacts/358084352359714013/13aac67668524a9da1d65a04e4a20c1e/artifacts/: model_summary.txt
mlartifacts/358084352359714013/21b7fa10cda444988889df5a294418e5/artifacts/: model_summary.txt
mlartifacts/358084352359714013/40a15cbcc7dc43719579ef3ccc471515/artifacts/: model_summary.txt
mlartifacts/358084352359714013/4b673d2471914933a1a1589322ff5bda/artifacts/: model_summary.txt
(+123 files in other folders)
