[tool.poetry]
name = "boston-project"
version = "0.1.0"
description = ""
authors = ["Pedro Araujo <dodobeatle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
dagster = "^1.10.13"
dagster-mlflow = "^0.26.13"
dagster-dbt = "^0.26.13"
dagster-airbyte = "^0.26.13"
pandas = "^2.2.3"
mlflow = "^2.22.0"
dbt-postgres = "^1.9.0"
dbt-core = "^1.9.4"
pydantic = "^2.11.4"
pytest = "^8.3.5"
parsedatetime = "^2.6"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
dagstermill = "^0.26.13"
notebook = "^7.4.2"
jupyterlab = "^4.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "boston_project.definitions"
project_name = "boston_project"

[tool.setuptools.packages.find]
exclude=["boston_project_tests"]